replace unmodifiableList to copyOf
Signed-off-by: ChanHyeongLee <cksgud410@gmail.com>